objects/npe03__Recurring_Donation__c.object
<CustomObject>
    <description>Recurring Donations with no end date.</description>
    <fields>
        <fullName>npe03__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe03__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N80000002bOmREAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe03__Date_Established__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe03__Donor_Name__c</fullName>
        <formula>if(
  LEN(npe03__Contact__c)&gt;0,
  npe03__Contact__r.FirstName  &amp; &quot; &quot; &amp; npe03__Contact__r.LastName,
   npe03__Organization__r.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe03__Installment_Amount__c</fullName>
        <formula>IF( 

OR(
(text(npe03__Schedule_Type__c)=$Label.npe03__recurringdonationmultiplyvalue), 
(text(npe03__Open_Ended_Status__c)=$Label.npe03__recurringdonationopenstatus)
) 
, npe03__Amount__c , IF(npe03__Installments__c&gt;0,npe03__Amount__c / npe03__Installments__c,0)




)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe03__Installment_Period__c</fullName>
        <description>How often you’ll receive the donations. NOTE: Changing the installment period for an existing Fixed-Length Recurring Donation may result in the loss and re-creation of open opportunities. Any data associated with those opportunities may be lost.</description>
        <inlineHelpText>How often you’ll receive the donations. NOTE: Changing the installment period for an existing Fixed-Length Recurring Donation may result in the loss and re-creation of open opportunities. Any data associated with those opportunities may be lost.</inlineHelpText>
        <label>Installment Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>1st and 15th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe03__Installments__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of installments (donations) you expect to receive. For Fixed-Length Recurring Donations only.</description>
        <inlineHelpText>Number of installments (donations) you expect to receive. For Fixed-Length Recurring Donations only.</inlineHelpText>
        <label>Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npe03__Last_Payment_Date__c</fullName>
        <description>Date of the last payment for this Recurring Donation</description>
        <inlineHelpText>Do Not Enter. The NPSP calculates this value automatically based on the last time a child donation was marked Posted.</inlineHelpText>
        <label>Last Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe03__Next_Payment_Date__c</fullName>
        <description>Holds the date of the next recurring payment.  Manually editing this field will recalculate all future opportunity&apos;s close dates based on the scheduled defined.</description>
        <inlineHelpText>The date on which you want the next donation to occur. This date also determines the date of all future donations.</inlineHelpText>
        <label>Next Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe03__Open_Ended_Status__c</fullName>
        <inlineHelpText>Choose Open for an Open-Ended Recurring Donation.  Choose None for a Fixed Length Recurring Donation.  Choose Closed to close a Recurring Donation.</inlineHelpText>
        <label>Open Ended Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe03__Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RecurringDonations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe03__Paid_Amount__c</fullName>
        <description>Total Amount paid on this Recurring Donation</description>
        <inlineHelpText>Do Not Enter. The NPSP calculates this value automatically as donations are made and marked Posted.</inlineHelpText>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe03__Recurring_Donation_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Recurring_Donations_Pledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe03__Schedule_Type__c</fullName>
        <description>Tells Salesforce how to compute the amount for each child opportunity, based on what you&apos;ve entered in the Amount field. For Fixed-Length Recurring Donations only.</description>
        <inlineHelpText>Tells Salesforce how to compute the amount for each child opportunity, based on what you&apos;ve entered in the Amount field. For Fixed-Length Recurring Donations only.</inlineHelpText>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiply By</fullName>
                </value>
                <value>
                    <fullName>Divide By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe03__Total_Paid_Installments__c</fullName>
        <description>Total number of installments paid on this Recurring Donation.</description>
        <inlineHelpText>Do Not Enter. The NPSP calculates this value automatically as donations are made and marked Posted.</inlineHelpText>
        <label>Total Paid Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npe03__Total__c</fullName>
        <formula>IF(TEXT( npe03__Open_Ended_Status__c) =  $Label.npe03__recurringdonationopenstatus, 0,
CASE(
 npe03__Schedule_Type__c ,
&quot;Multiply By&quot;, npe03__Installments__c * npe03__Amount__c ,
&quot;Divide By&quot;,npe03__Amount__c
,0
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Non-Open Ended Recurring Donations, the total amount of all Opportunities.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Recurring Donations</label>
    <nameField>
        <label>Recurring Donation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>